--- a/src/neural_decoder/run_char_level_lm.ipynb
+++ b/src/neural_decoder/run_char_level_lm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2025-08-23 22:02:54 save_restore_connector:282] Model NGramGPULanguageModel was successfully restored from /workspace/transformers_with_dietcorp/lm/char_6gram_lm.nemo.\n"
+      "[NeMo I 2025-08-26 01:07:58 save_restore_connector:282] Model NGramGPULanguageModel was successfully restored from /workspace/transformers_with_dietcorp/lm/char_6gram_lm.nemo.\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +152,8 @@
     "            if ventral_6v_only:\n",
     "                X = X[:, :, :128]\n",
     "\n",
-    "\n",
-    "            with torch.no_grad():\n",
-    "                pred = model.forward(X, X_len, day_tensor)\n",
+    "            with torch.no_grad(): \n",
+    "                pred = model.forward(X, X_len, day_tensor)[:,:, :30]\n",
     "\n",
     "            # Output lengths\n",
     "            if hasattr(model, \"compute_length\"):\n",
@@ -210,25 +209,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 64, 41])\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable int object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m outputs, cer, per_day_cer \u001b[39m=\u001b[39m evaluate_model(model, loadedData, args, partition\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m'\u001b[39m, device\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+      "CER DAY 0: 0.373233\n",
+      "CER DAY 1: 0.293769\n",
+      "CER DAY 2: 0.276964\n",
+      "CER DAY 3: 0.276510\n",
+      "CER DAY 4: 0.149733\n",
+      "CER DAY 5: 0.118876\n",
+      "CER DAY 6: 0.148660\n",
+      "CER DAY 7: 0.176110\n",
+      "CER DAY 8: 0.167794\n",
+      "CER DAY 9: 0.212660\n",
+      "CER DAY 10: 0.168666\n",
+      "CER DAY 11: 0.208599\n",
+      "CER DAY 12: 0.185535\n",
+      "CER DAY 13: 0.150725\n",
+      "CER DAY 14: 0.122137\n",
+      "CER DAY 15: 0.129672\n",
+      "CER DAY 16: 0.133152\n",
+      "CER DAY 17: 0.186555\n",
+      "CER DAY 18: 0.153346\n",
+      "CER DAY 19: 0.129005\n",
+      "CER DAY 20: 0.111397\n",
+      "CER DAY 21: 0.143902\n",
+      "CER DAY 22: 0.125197\n",
+      "CER DAY 23: 0.166225\n",
+      "Model performance (CER): 0.17459088509590004\n"
      ]
     }
    ],
@@ -238,22 +250,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "num_classes = 30\n",
+    "logits = np.zeros((len(outputs['logits']), max(outputs['logitLengths']), num_classes))\n",
+    "for idx, l in enumerate(outputs['logits']):\n",
+    "    l_length = outputs['logitLengths'][idx]\n",
+    "    logits[idx, :l_length, :] = l\n",
+    "    \n",
+    "logits_torch = torch.from_numpy(logits)\n",
+    "log_probs = F.log_softmax(logits_torch, dim=-1)\n",
+    "log_probs_length = torch.from_numpy(np.array(outputs['logitLengths']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decoder = BatchedBeamCTCComputer(blank_index=0, beam_size=16, return_best_hypothesis=False, fusion_models=[lm], \n",
+    "                                 fusion_models_alpha=[0.25])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(123, 41)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (29) must match the size of tensor b (26) at non-singleton dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m transcripts \u001b[39m=\u001b[39m decoder\u001b[39m.\u001b[39;49mbatched_beam_search_torch(log_probs, log_probs_length)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m/workspace/nemo/nemo/collections/asr/parts/submodules/ctc_batched_beam_decoding.py:334\u001b[0m, in \u001b[0;36mBatchedBeamCTCComputer.batched_beam_search_torch\u001b[0;34m(self, decoder_outputs, decoder_output_lengths)\u001b[0m\n\u001b[1;32m    330\u001b[0m \u001b[39mfor\u001b[39;00m fusion_idx, fusion_model \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfusion_models):\n\u001b[1;32m    331\u001b[0m     fusion_scores, fusion_states_candidates \u001b[39m=\u001b[39m fusion_model\u001b[39m.\u001b[39madvance(\n\u001b[1;32m    332\u001b[0m         states\u001b[39m=\u001b[39mfusion_states_list[fusion_idx]\u001b[39m.\u001b[39mview(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m    333\u001b[0m     )\n\u001b[0;32m--> 334\u001b[0m     fusion_scores \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mwhere(\n\u001b[1;32m    335\u001b[0m         repeated_mask[\u001b[39m.\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m.\u001b[39;49m, :\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m], \u001b[39m0\u001b[39;49m, fusion_scores\u001b[39m.\u001b[39;49mview(curr_batch_size, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbeam_size, \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m    336\u001b[0m     )\n\u001b[1;32m    337\u001b[0m     log_probs[\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, :\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfusion_models_alpha[fusion_idx] \u001b[39m*\u001b[39m fusion_scores\u001b[39m.\u001b[39mview(\n\u001b[1;32m    338\u001b[0m         curr_batch_size, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbeam_size, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m    339\u001b[0m     )\n\u001b[1;32m    340\u001b[0m     fusion_states_candidates_list[fusion_idx] \u001b[39m=\u001b[39m fusion_states_candidates\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (29) must match the size of tensor b (26) at non-singleton dimension 2"
+     ]
     }
    ],
    "source": [
-    "outputs['logits'][10].shape"
+    "transcripts = decoder.batched_beam_search_torch(log_probs, log_probs_length)"
    ]
   },
   {
