--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,8 @@
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
       "[nltk_data]     /root/nltk_data...\n",
-      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger_eng.zip.\n"
+      "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+      "[nltk_data]       date!\n"
      ]
     },
     {
@@ -67,7 +68,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "79569a03",
    "metadata": {},
    "outputs": [],
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -139,22 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "edb2175e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /root/nltk_data...\n",
-      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
-      "[nltk_data] Downloading package cmudict to /root/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/cmudict.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re \n",
     "from g2p_en import G2p\n",
@@ -189,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -316,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
